# cv-optimizer-ai

./: .env.example  .gitignore  DESIGN.md  PRODUCT.md  README.md  app.py  base_conocimiento.md  config.py  educacion.md  habilidades.md  packages.txt  pyproject.toml  requirements.txt
.streamlit/: secrets.toml.example
models/: __init__.py  profile.py
services/: gemini_client.py  pdf_generator.py
storage/: __init__.py  _db.py
tests/: test_models.py  test_services.py  test_storage.py  test_utils.py
ui/: profile_form.py  tab_educacion.py  tab_experiencia.py  tab_habilidades.py  tab_vacante.py
utils/: pdf_extractor.py  retry.py
